# typio-engine-sherpa

./: .gitignore  CHANGELOG.md  README.md  meson.build  typio-engine-sherpa.toml.in
docs/dev/: documentation-style-guide.md  setup.md
docs/how-to/: index.md  install-a-model.md
docs/reference/: configuration.md  index.md
scripts/: install-sensevoice-model.sh
src/: sherpa.c  worker_main.c
